--- a/content/courses/stat220/Tutorials/Lect1.Rmd
+++ b/content/courses/stat220/Tutorials/Lect1.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Up and Running with blogdown"
-subtitle: "A workshop for the Portland R User Group"
-author: "Alison Presmanes Hill"
-date: "2017-09-14"
+title: "Day 1 Slides"
+subtitle: "Introduction to the course"
+author: "Deepak Bastola"
+date: "01-05-2022"
 output:
   xaringan::moon_reader:
     css: ["default", "rladies", "rladies-fonts"]
