--- a/content/courses/stat220/Tutorials/github_stat220.Rmd
+++ b/content/courses/stat220/Tutorials/github_stat220.Rmd
@@ -4,17 +4,20 @@ description: |
   This guide will help you setup Git and GitHub for use in Stat 220.
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
+```
+
 ## Overview
 
 If you are using the maize RStudio server, then you can connect to
 GitHub without any extra software downloads. If you are using RStudio on
 your computer, then you will need to download Git software (as directed
-in [Software in Stat 220](software.md)) to use GitHub connected
+in [Software in Stat 220]()) to use GitHub connected
 projects.
 
 I will host all of our course materials on GitHub, and you will use
 GitHub to submit homework and collaborate on projects.
-
 
 
 ## Getting setup with Git and GitHub
@@ -33,9 +36,9 @@ Everyone needs to connect Git and GitHub by doing the following:
 2.  Setup options in Git by running the following code chunk in your
     console:
 
-``` r
-    library(usethis)
-    use_git_config(user.name = "Jane Doe", user.email = "jane@example.org")
+```r
+library(usethis)
+use_git_config(user.name = "Jane Doe", user.email = "jane@example.org")
 ```
 
     changing the first two lines to your own name and email (this should
@@ -88,7 +91,7 @@ repository will contain assignment details (README, .Rmd).
 ### Creating an individual assignment repo and project
 
 1.  Go to our course GitHub organization page
-    (<https://github.com/stat220-fa21>) and find your homework repo, such as `hw-1-username` (where your username is attached).
+    (<https://deepbas.netlify.app/courses/>) and find your homework repo, such as `hw-1-username` (where your username is attached).
 2.  Enter the online assignment repository on GitHub. Click the green
     **"Code"** button. Most of you should just use the default setting
     which is to "clone" (copy) using HTTPS. Click the clipboard to the
@@ -227,8 +230,6 @@ knitr::include_graphics("img/ConflictResolution.JPG")
 * [Git setup for Windows (video)](https://youtu.be/F_fPEMnr1OQ)
 * [Git setup for Mac (video)](https://www.youtube.com/watch?v=kbmSZwK0k-A&t)
 * [How to clone, edit, and push homework assignments with GitHub Classroom (video)](https://youtu.be/pAcMgGbCtQw)
-
-
 
 
 ## Acknowledgements {.appendix}
