--- a/content/courses/stat220/Tutorials/github_stat220.Rmd
+++ b/content/courses/stat220/Tutorials/github_stat220.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
 If you are using the maize RStudio server, then you can connect to
 GitHub without any extra software downloads. If you are using RStudio on
 your computer, then you will need to download Git software (as directed
-in [Software in Stat 220]()) to use GitHub connected
+in [Software in Stat 220](software.Rmd)) to use GitHub connected
 projects.
 
 I will host all of our course materials on GitHub, and you will use
