--- a/content/courses/stat220/Tutorials/github_stat220.Rmd
+++ b/content/courses/stat220/Tutorials/github_stat220.Rmd
@@ -105,7 +105,7 @@ repository will contain assignment details (README, .Rmd).
     RStudio window and select **New Project...**.
 
 \  
-```{r echo=FALSE, fig.align='center', out.width = "80%"}
+```{r, fig.align='center', out.width = "80%"}
 knitr::include_graphics("img/maize_project.png")
 ```
 
@@ -203,7 +203,7 @@ Collaborative Github assignments are pretty similar to individual assignments.
 
 ### Creating a group/partner assignment repo and project
 
-Go to our course GitHub organization page(<https://github.com/stat220-fa21>) and find the repo for your group, for example if your group name is "team01" the you might find the `mp1-team01` repo. Clone this repo to your computer/maize account using the same steps done for an individual assignment (see steps 2-3).
+Go to our course GitHub organization page and find the repo for your group, for example if your group name is "team01" the you might find the `mp1-team01` repo. Clone this repo to your computer/maize account using the same steps done for an individual assignment (see steps 2-3).
 
 #### Working with collaborative repos
 
@@ -213,13 +213,8 @@ When you are working together on a Github project, you should commit and push yo
 
 If you get an error about conflict after pulling or pushing, don't freak out! This can happen if you edit a file (usually an .Rmd or .R file) in a location that was also changed by a teammate. When this happens you should attempt to fix the **merge conflict**. Take a look at [this resource site](http://r-pkgs.had.co.nz/git.html#git-pull) and try to fix the merge conflict in Rstudio. Katie also created a diagram shown below that "explains" how and when conflicts will likely happen and how you can resolve the problems in Rstudio. If that doesn't work contact me!
 
-```{r echo=FALSE}
-knitr::include_graphics("img/ConflictResolution.JPG")
-```
 
-
-
-
+![Conflict Resolution](img/maize_home.png)
 
 ## Additional resources
 
