--- a/content/courses/stat220/Tutorials/github_stat220.Rmd
+++ b/content/courses/stat220/Tutorials/github_stat220.Rmd
@@ -56,19 +56,18 @@ use_git_config(user.name = "Jane Doe", user.email = "jane@example.org")
     -   **Strongly recommended:** Cache credential using a HTTPS linked
         project.
 
-        Complete the steps in [Section 10.1 of Happy Git with
-        R](http://happygitwithr.com/credential-caching.html) to get a
+        Complete the steps in [Section 9.1 of Happy Git with
+        R](https://happygitwithr.com/https-pat.html) to get a
         personal access token (you will need to install the `usethis`
-        package first). Then, follow the directions in [Section 10.2.1
+        package first). Then, follow the directions in [Section 9.2
         of Happy Git with
-        R](https://happygitwithr.com/credential-caching.html#call-an-r-function-to-store-your-credentials)
-        (I've had good luck with the `gitcreds` package, and it is
-        installed on maize.)
+        R](https://happygitwithr.com/https-pat.html#call-an-r-function-to-store-your-credentials)
+        
 
     -   A second method is to generate a SSH key. First check to see if
         you have a SSH key. Go into the shell (again, through RStudio
         `Tools -> Shell`) and complete on this page
-        <http://happygitwithr.com/ssh-keys.html>, which is Chapter 11 in
+        <http://happygitwithr.com/ssh-keys.html>, which is Chapter 10 in
         Happy Git with R.
 
 4.  (optional) Follow the instructions here
@@ -92,7 +91,7 @@ repository will contain assignment details (README, .Rmd).
 ### Creating an individual assignment repo and project
 
 1.  Go to our course GitHub organization page
-    (<https://deepbas.netlify.app/courses/>) and find your homework repo, such as `hw-1-username` (where your username is attached).
+    (<https://deepbas.io/courses/stat220/>) and find your homework repo, such as `hw-1-username` (where your username is attached).
 2.  Enter the online assignment repository on GitHub. Click the green
     **"Code"** button. Most of you should just use the default setting
     which is to "clone" (copy) using HTTPS. Click the clipboard to the
@@ -196,8 +195,6 @@ Commit pop-up window or in the Git tab (shown above).
 To "turn in" an assignment, all you need to do is push all your relevant
 files to Github by the deadline.
 
-
-
 ## Group work
 
 Collaborative Github assignments are pretty similar to individual assignments.
@@ -212,11 +209,7 @@ For group homework, I suggest that only the *recorder* edit the group-homework-x
 
 When you are working together on a Github project, you should commit and push your modifications frequently. You will also need to frequently **pull** updates from Github down to your local version of RStudio. These updates are changes that your teammates have made since your last pull.  To pull in changes, click the "Down"  **Pull** arrow in the Git tab (shown above). 
 
-If you get an error about conflict after pulling or pushing, don't freak out! This can happen if you edit a file (usually an .Rmd or .R file) in a location that was also changed by a teammate. When this happens you should attempt to fix the **merge conflict**. Take a look at [this resource site](http://r-pkgs.had.co.nz/git.html#git-pull) and try to fix the merge conflict in Rstudio. Katie also created a diagram shown below that "explains" how and when conflicts will likely happen and how you can resolve the problems in Rstudio. If that doesn't work contact me!
-
-
-![Conflict Resolution](img/maize_home.png)
-
+If you get an error about conflict after pulling or pushing, don't freak out! This can happen if you edit a file (usually an .Rmd or .R file) in a location that was also changed by a teammate. When this happens you should attempt to fix the **merge conflict**. Take a look at [this resource site](http://r-pkgs.had.co.nz/git.html#git-pull) and try to fix the merge conflict in Rstudio. 
 
 
 ## Additional resources
@@ -232,9 +225,7 @@ If you get an error about conflict after pulling or pushing, don't freak out! Th
 
 ## Acknowledgements {.appendix}
 
-Most of this content in this guide was taken from
-<https://github.com/jfiksel/github-classroom-for-students> and edited
-for our classroom use. 
+This installation guide is based on the guide from Adam Loy.
 
 ## Reuse {.appendix}
 
