--- a/content/courses/stat220/Tutorials/PAT.Rmd
+++ b/content/courses/stat220/Tutorials/PAT.Rmd
@@ -40,5 +40,8 @@ gitcreds_set()
 
 
 ## Acknowledgments {.appendix}
+This installation guide is based on the guide from Adam Loy.
+
+## Reuse {.appendix}
 
 This work is is licensed under a [Creative Commons Attribution-NonCommercial 4.0 International License](http://creativecommons.org/licenses/by-nc/4.0/).
