--- a/content/courses/stat220/Tutorials/rstudio_stat220.Rmd
+++ b/content/courses/stat220/Tutorials/rstudio_stat220.Rmd
@@ -27,7 +27,7 @@ The server (online) version of Rstudio is run from a unix server. You can naviga
 **1.** In Rstudio, click the **Files** *tab* in the lower righthand window. Note: this is **not** the same as the **File** *menu* option.
 
 ```{r echo=FALSE, fig.align='center'}
-knitr::include_graphics("img/maize_files.png")
+knitr::include_graphics("/img/maize_files.png")
 ```
 
 
@@ -35,13 +35,13 @@ knitr::include_graphics("img/maize_files.png")
 
 
 ```{r echo=FALSE, fig.align='center'}
-knitr::include_graphics("img/maize_home.png")
+knitr::include_graphics("/img/maize_home.png")
 ```
 
 
 **3.** Click the **New Folder** button and name the folder **stat220**. 
 ```{r echo=FALSE, fig.align='center'}
-knitr::include_graphics("img/maize_newfolder.png")
+knitr::include_graphics("/img/maize_newfolder.png")
 ```
 
 
@@ -49,7 +49,7 @@ knitr::include_graphics("img/maize_newfolder.png")
 
 
 ```{r echo=FALSE, fig.align='center'}
-knitr::include_graphics("img/maize_stat220.png")
+knitr::include_graphics("/img/maize_stat220.png")
 ```
 
 **5.** Within the **stat220** folder, create an **RStudio project** called **content** with the following steps:
@@ -57,29 +57,29 @@ knitr::include_graphics("img/maize_stat220.png")
   - **a.** Click  the **Project** button in the upper right corner of your RStudio window and select **New Project...**.
 
 ```{r echo=FALSE, fig.align='center'}
-knitr::include_graphics("img/maize_project.png")
+knitr::include_graphics("/img/maize_project.png")
 ```
 
   
   - **b.** Select  **New Directory** and then **New Project**
 
 ```{r echo=FALSE, fig.align='center', out.width='50%'}
-knitr::include_graphics("img/maize_newdirectory.png")
-knitr::include_graphics("img/maize_newdirectory2.png")
+knitr::include_graphics("/img/maize_newdirectory.png")
+knitr::include_graphics("/img/maize_newdirectory2.png")
 ```
 
   
   - **c.** Enter **content** as the **Directory name** and use the **Browse** button to find your **stat220** folder. Then click **Create Project**.
 
 ```{r echo=FALSE, fig.align='center', out.width='50%'}
-knitr::include_graphics("img/maize_create.png")
+knitr::include_graphics("/img/maize_create.png")
 ```
 
   
   - **d.** You should now have a new folder called **content** in your **stat220** folder and this folder will contain an RStudio project `.Rproj`. Feel free to add subfolders to this **content** folder (e.g. slides, examples, etc).
 
 ```{r echo=FALSE, fig.align='center'}
-knitr::include_graphics("img/maize_Rproj.png")
+knitr::include_graphics("/img/maize_Rproj.png")
 ```
 
 **Warning: Do not** create an RStudio project in the main stat220 folder because it is not good practice to have RStudio projects in subfolders of another project (e.g. a project within a project is not recommended). 
@@ -95,13 +95,13 @@ Create a folder called **stat220** somewhere on your computer. Within this folde
 Once you've created a project, your R session should be running within that project folder. You can check which project you are in by checking the project name in the upper right part of your RStudio window. Here we see the **content** project is open:
 
 ```{r echo=FALSE, fig.align='center'}
-knitr::include_graphics("img/maize_content.png")
+knitr::include_graphics("/img/maize_content.png")
 ```
 
 Running R from an RStudio project sets your **working directory** to the project folder: 
 
 ```{r echo=FALSE, fig.align='center'}
-knitr::include_graphics("img/maize_getwd.png")
+knitr::include_graphics("/img/maize_getwd.png")
 ```
 
 This allows for easy file path access to all files related to this project. 
@@ -114,8 +114,7 @@ To **start** a project, click on the `.Rproj` file or use the **Open Project...*
 - Never save files to a lab computer hard drive (e.g. desktop, downloads, etc). They will be erased when you log off. 
 - Do not use gmail as a file storage system! Avoid emailing yourself files that you created (and saved) on a lab computer. Eventually you will lose work this way.
 - Avoid using online versions of google drive and dropbox. Similar to gmail, downloading, editing a doc, then uploading it back to drive/dropbox is another great way to lose work. 
-- Avoid [this](https://xkcd.com/1459/), [this](http://phdcomics.com/comics.php?f=1531), and [this](https://www.datamation.com/imagesvr_ce/3829/version-control.jpg).
-
+- Avoid [this](https://xkcd.com/1459/) and [this](http://phdcomics.com/comics.php?f=1531), 
 
 
 ## Acknowledgments {.appendix}
