--- a/content/courses/stat220/software.Rmd
+++ b/content/courses/stat220/software.Rmd
@@ -3,6 +3,7 @@ title: "Software in Stat 220"
 description: |
   This guide describes the key software we will use this term
   in Stat 220.
+date: "2022-01-05"
 ---
 
 ```{r setup, include=FALSE}
