--- a/public/pdf/Day4/Day4.Rmd
+++ b/public/pdf/Day4/Day4.Rmd
@@ -550,7 +550,7 @@ class: action
 
 # Your Turn 4
 
-The provides values for life expectancy, GDP per capita, and population, every five years, from 1960 to 2018.
+The `gapminder` dataset provides values for life expectancy, GDP per capita, and population, every five years, from 1960 to 2018.
 Use `gapminder` dataset to answer the given set of problems.
 
 ```{r, echo=FALSE}
